fix outer alignments

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 .content {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .page-title {
-  margin-bottom: 40px;
+  margin: 0 10px 40px;
   text-align: center;
+  width: auto;
 }
 
 @media screen and (max-width: 722px) {
